<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pituustextView"
        android:layout_width="148dp"
        android:layout_height="63dp"
        android:layout_row="0"
        android:layout_column="0"
        android:background="#FFEB3B"
        android:text="@string/pituus"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/amountPituus"
        android:layout_width="235dp"
        android:layout_height="72dp"
        android:layout_row="0"
        android:layout_column="1"
        android:background="#00BCD4"
        android:digits="0123456789.,"
        android:ems="10"
        android:hint="@string/enter_pituus"
        android:inputType="number"
        android:maxLength="6" />

    <TextView
        android:id="@+id/painoTextView"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:background="#FFEB3B"
        android:text="@string/paino"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/amountPaino"
        android:layout_width="237dp"
        android:layout_height="59dp"
        android:layout_row="1"
        android:layout_column="1"
        android:background="#00BCD4"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/enter_paino"
        android:inputType="number"
        android:maxLength="6" />

    <EditText
        android:id="@+id/amountTulos"
        android:layout_width="238dp"
        android:layout_height="53dp"
        android:layout_row="3"
        android:layout_column="1"
        android:background="#00BCD4"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="number" />

    <TextView
        android:id="@+id/tulosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:background="#FFEB3B"
        android:text="@string/tuloksesi"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="#A6E91E63"
        android:onClick="laske"
        android:text="@string/laske"
        android:textSize="18sp" />

</GridLayout>